Enhance student feedback and dashboard templates
- Updated FeedbackDetail.html to improve layout and styling, including a new gradient header and enhanced question presentation.
- Revamped Dashboard.html with a modern design, incorporating animated cards and improved data visualization for engagement and KPI metrics.
- Refined TotalProgram.html for better readability and removed unnecessary text.
- Changed the branding from "JavaX Pro" to "EduInsight" in Studentbase.html for a more relevant identity.
- Added responsive design elements and improved user interaction features across templates.